[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchrbm"
version = "0.0.2"
authors = [
  { name="Anonymous"},
]
description = "Fast training and sampling of Restricted Boltzmann Machines"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anonymousrbm/iclr-2025"
Issues = "https://github.com/anonymousrbm/iclr-2025/issues"
